execution-engine/contract_macro/tests/templates/no_contract.stderr
error[E0433]: failed to resolve: use of undeclared type or module `contract`
  --> $DIR/no_contract.rs:13:5
   |
13 | use contract::{
   |     ^^^^^^^^ use of undeclared type or module `contract`

error[E0433]: failed to resolve: use of undeclared type or module `types`
  --> $DIR/no_contract.rs:17:5
   |
17 | use types::{
   |     ^^^^^ use of undeclared type or module `types`

error[E0432]: unresolved import `types`
  --> $DIR/no_contract.rs:17:5
   |
17 | use types::{
   |     ^^^^^ use of undeclared type or module `types`

error[E0433]: failed to resolve: use of undeclared type or module `storage`
  --> $DIR/no_contract.rs:33:29
   |
33 |         let int_ref: URef = storage::new_uref(u);
   |                             ^^^^^^^ use of undeclared type or module `storage`

error[E0433]: failed to resolve: use of undeclared type or module `runtime`
  --> $DIR/no_contract.rs:35:9
   |
35 |         runtime::put_key(INT_KEY, int_key)
   |         ^^^^^^^ use of undeclared type or module `runtime`

error[E0433]: failed to resolve: use of undeclared type or module `storage`
  --> $DIR/no_contract.rs:40:29
   |
40 |         let int_ref: URef = storage::new_uref(c);
   |                             ^^^^^^^ use of undeclared type or module `storage`

error[E0433]: failed to resolve: use of undeclared type or module `runtime`
  --> $DIR/no_contract.rs:42:9
   |
42 |         runtime::put_key(U512_KEY, int_key)
   |         ^^^^^^^ use of undeclared type or module `runtime`

error[E0433]: failed to resolve: use of undeclared type or module `runtime`
  --> $DIR/no_contract.rs:38:5
   |
38 |     #[casperlabs_method]
   |     ^^^^^^^^^^^^^^^^^^^^ use of undeclared type or module `runtime`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `__deploy` in this scope
  --> $DIR/no_contract.rs:30:5
   |
30 |     #[casperlabs_constructor]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid `crate_type` value
 --> $DIR/no_contract.rs:4:18
  |
4 |     crate_type = "target arch should be wasm32"
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[deny(unknown_crate_types)]` on by default

warning: unused imports: `BTreeMap`, `BTreeSet`, `string::String`
 --> $DIR/no_contract.rs:8:19
  |
8 |     collections::{BTreeMap, BTreeSet},
  |                   ^^^^^^^^  ^^^^^^^^
9 |     string::String,
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `casperlabs_contract`
  --> $DIR/no_contract.rs:11:46
   |
11 | use contract_macro::{casperlabs_constructor, casperlabs_contract, casperlabs_method};
   |                                              ^^^^^^^^^^^^^^^^^^^
